# todo

./: README.md  bun.lockb  index.html  package.json  tailwind.config.js
.github/workflows/: main.yml
src/: App.vue  config.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/api/: basApiClient.ts
src/components/: AuthForm.vue  DialogModal.vue  Greet.vue  LoginForm.vue  Modal.vue  Notification.vue  RegisterForm.vue  TaskList.vue  TaskModal.vue
src/components/controls/: ButtonPrimary.vue  ButtonSecondary.vue  ButtonStandard.vue  InputGroup.vue  TextInput.vue
src/composables/: state.ts  useAuth.ts  usePagination.ts  useTasks.ts  useValidation.ts
src/services/: VaidationError.ts  route.ts
src/services/api/: base.ts  taskApi.ts
src/stores/: notificationStore.ts
src/types/: ApiTypes.ts  AuthState.ts  PaginationOptions.ts  RegisterRequest.ts  Task.ts  TypeChecks.ts  UserTypes.ts
