[package]
name = "todo"
version = "1.0.3"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["http-all", "updater", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5.0.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
